--- a/Parallel algorithm.ipynb
+++ b/Parallel algorithm.ipynb
@@ -32,10 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hotel dataset (hotels-exmpl: 500 εγγραφές). Για λόγους διευκόλυνσης του ελέγχου η δοκιμή παρουσιάζεται σε δοκιμαστικό \n",
-    "σύνολο δεδομένων για τα ξενοδοχεία σε 500 εγγραφές και για τα εστιατόρια σε 540 εγγραφές. Ελέγχθηκε και στο δοσμένο αρχικό σύνολο δεδομένων χωρίς να συναντάται χρονική απόκλιση, ωστόσο για λόγους σύγκρισης των δύο αλγορίθμων (parallel algorithm και cross join algorithm) που θα παρουσιαστούν στην εργασία επιλέχθηκε μικρό δοκιμαστικό dataset.\n",
-    "\n",
-    "*Στον συγκριτικό κώδικα cross join που θα παρουσιαστεί, ο χρόνος εκτέλεσης στο δοσμένο αρχικό dataset είναι κάποιες ώρες οπότε καθίσταται χρονοβόρα η δοκιμή του. Για αυτό ο έλεγχος των δύο αλγορίθμων παρουσιάζεται σε μικρότερα σύνολα. Ωστόσο, η αποδοτικότητα του parallel algorithm που αναπτύχθηκε φάνηκε ότι δεν επηρεάζεται χρονικά από το μέγεθος του συνόλου εγγραφών, κάτι που είναι και ο σκοπός μας."
+    "Hotel dataset (hotels-exmpl: 500 εγγραφές).
    ]
   },
   {
